--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
-title: Cassia Rosa 
-description: Mestra em Ciência da Computação (UFMS) - Pesquisadora em IA antirracista
+theme: pages-themes/modernist@v0.2.0
+title: Cássia Rosa 
+description: Mestra em Ciência da Computação (UFMS) - PLN • Racismo Algorítmico • Detecção de Discurso de Ódio
